<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_search">
        <ListPreference
            android:key="default_sort"
            android:title="@string/pref_default_sort_title"
            android:summary="@string/pref_default_sort_summary"
            android:entries="@array/sort_options"
            android:entryValues="@array/sort_values"
            android:defaultValue="relevance" />

        <SwitchPreferenceCompat
            android:key="include_patents"
            android:title="@string/pref_include_patents_title"
            android:summary="@string/pref_include_patents_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="include_citations"
            android:title="@string/pref_include_citations_title"
            android:summary="@string/pref_include_citations_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_display">
        <ListPreference
            android:key="theme_mode"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_summary"
            android:entries="@array/theme_options"
            android:entryValues="@array/theme_values"
            android:defaultValue="system" />

        <SwitchPreferenceCompat
            android:key="show_abstracts"
            android:title="@string/pref_show_abstracts_title"
            android:summary="@string/pref_show_abstracts_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_downloads">
        <SwitchPreferenceCompat
            android:key="wifi_only_downloads"
            android:title="@string/pref_wifi_only_title"
            android:summary="@string/pref_wifi_only_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_about">
        <Preference
            android:key="app_version"
            android:title="@string/pref_version_title"
            android:summary="1.0.0"
            android:selectable="false" />

        <Preference
            android:key="clear_cache"
            android:title="@string/pref_clear_cache_title"
            android:summary="@string/pref_clear_cache_summary" />
    </PreferenceCategory>

</PreferenceScreen>
