<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_my_library" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_my_profile" />
    </group>

    <group android:id="@+id/group_secondary">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
